# agentmail

./: .gitignore  CLAUDE.md  LICENSE  README.md  daemon-pyproject.toml  pyproject.toml  requirements.txt  run.py  run_relay.py
.claude-plugin/: marketplace.json
agentmail/: __init__.py  client.py
agentmail-plugin/: .mcp.json  server.py
agentmail-plugin/.claude-plugin/: plugin.json
agentmail-plugin/commands/: inbox.md  send.md
agentmaild/: __init__.py  client.py  config.py  crypto.py  discovery.py  mailbox.py  main.py  models.py  relay_server.py  router.py
agentmaild/web/: index.html
deploy/: ORACLE_SETUP.md  push_to_vm.sh  setup_oracle.sh
examples/: send_to_agent.py  simple_agent.py
